--- a/fotos.html
+++ b/fotos.html
@@ -103,31 +103,46 @@
 
     <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
     <div class="paginafotos">
-    <li> <img src="img/ESCRITORIOTATA.jpg" alt="escritorio"></li>
-    <li> <img src="img/sabato-pasilloentrada.jpg" alt="pasillo entrada"></li>
-    <li> <img src="img/ATELIER1.jpg" alt="atelier soldi berni"></li>
-    <li> <img src="img/ESTUDIOPILECERES.jpg" alt="serie retratios sartre kafka "></li>
-    <li> <img src="img/TRADUCCIONES.jpg" alt="traducciones sabato"></li>
-    <li> <img src="img/PATIO.jpg" alt="patio casona santos lugares"></li>
-    <li> <img src="img/MURAL.jpg" alt="mural martin ron"></li>
-    <li> <img src="img/cartel-casade-grande.jpg" alt="sabato 3135"></li>
-    <li> <img src="img/estudiopileestatua.jpg" alt="estatua de ceres parque lezama"></li>
-    <li> <img src="img/Estudio pile sillones.jpg" alt="estudio pile"></li>
-    <li> <img src="img/ATELIERAFUERA.jpg" alt="atelier soldi berni"></li>
-    <li> <img src="img/ATELIER5.jpg" alt="atelier elena wolf"></li>
-    <li> <img src="img/ATELIERTATACUADROS.jpg" alt="expresionismo sartre"></li>
-    <li> <img src="img/FACHADACARTEL.jpg" alt="casa de sabato"></li>
-    <li> <img src="img/reloj-cucu.jpg" alt="reloj cucu"></li>
-    <li> <img src="img/BIBLIOETCA3.jpg" alt="biblioteca"></li>
-    <li> <img src="img/CASAILUMINADA (2).jpg" alt="casa iluminada"></li>
-    <li> <img src="img/ESCRITORIOTATA.jpg" alt=""></li>
-    <li> <img src="img/estudiopileestatua.jpg" alt="estatua ceres diosa agricultura"></li>
-    <li> <img src="img/ESTUDIOPILEPENUMBRA.jpg" alt="estudio penunbra"></li>
-    <li> <img src="img/ATELIERTATACUADROS.jpg" alt="sartre existencialismo surrealismo"></li>
-    <li> <img src="img/Casa Museo Ernesto Sábato.jpg" alt="casa sabato2"></li>
-    <li> <img src="img/FACHADA.jpg" alt="fachada"></li>
-    <li> <img src="img/Ernesto.biblioteca.jpg" alt="biblioteca"></li>
-    <li> <img src="img/Ernesto-Sábato-2.jpg (2).jpg" alt="ernesto sabato"></li>
+
+    <li><h2>Su anteojos</h2><img src="img/ESCRITORIOTATA.jpg"
+         alt="escritorio">
+        <h3>En su escritorio, su rincón de creación, yacen los uno de los anteojos que Sabato usaba para trabajar</h3></li>
+    <li> <h2>
+        El deseo de Ernesto.
+    </h2><img src="img/sabato-pasilloentrada.jpg" alt="pasillo entrada">
+    <h3>La familia decide cumplir el deseo de abrir las puertas de la casona, como museo como el lo soñaba. Desde 2014 todos los sábados, Guido y Luciana Sabato, reciben a los visitantes de la mano de ellos.</h3>
+</li>
+    <li> <h2>El refugio de la pintura</h2> <img src="img/ATELIER1.jpg" alt="atelier soldi berni">
+    <h3>En sus últimos años se dedicó a pintar, en oleo, pintura expresionista. Se destacan sus retratos a Nietzsche, Van Gogh, Sartre, Kafka, Dostoievski, entre otros</h3></li>
+    <li> <h2>El jardín de Matilde</h2><img src="img/ESTUDIOPILECERES.jpg" alt="serie retratios sartre kafka ">
+    <h3>Rodeados de bibliotecas, los visitantes pueden apreciar la estatua de Ceres, que alguna vez estuviera en parque Lezama, y donde transcurren los encuentros entre Martín y Alejandra en "Sobre Héroes y Tumbas"</h3></li>
+    <li> <h2>
+        Traducciones de sus obras
+    </h2><img src="img/TRADUCCIONES.jpg" alt="traducciones sabato">
+    <h3>Entre tantas obras traducidas, se destaca la traducción en Kurdo de "Sobre Héroes y Tumbas"</h3></li>
+    <li> 
+        <h2>El Patio</h2><img src="img/PATIO.jpg" alt="patio casona santos lugares">
+    <h3>Luego de cada recorrido, terminamos en este patio donde los visitantes se sientan y charlan con los nietos-guías, y les hacen preguntas</h3></li>
+    <li> <h2>El mural de Sabato</h2><img src="img/MURAL.jpg" alt="mural martin ron">
+    <h3>Martín Ron, muralista de trayectoria internacional, pintó este mural impactante, que se encuentra justo enfrente de la casa Museo Sabato.</h3></li>
+    <li> <h2>Casa Museo Sabato hecha realidad</h2><img src="img/cartel-casade-grande.jpg" alt="sabato 3135">
+    <h3>Gracias a la ayuda del municipio de Tres de Febrero y de los amigos de la Casa de Ernesto Sabato, este sueño pudo ser realidad</h3></li>
+  
+    <li> <h2>Atelier construido por Sabato para Sabato</h2><img src="img/ATELIERAFUERA.jpg" alt="atelier soldi berni">
+    <h3>El único lugar de la casa que Ernesto construyó y modificó, ganandole terreno al gran patio, y construyendo este atelier, con entrada de luz en diagonal y orientación sur, como le indicaron sus amigos pintores: Soldi y Berni</h3></li>
+    <li> <h2>Sus pinturas expresionistas</h2><img src="img/ATELIER5.jpg" alt="atelier elena wolf">
+    <h3>Se lo puede escuchar hablar sobre sus pinturas en los videos que acompañan la visita: Sí, son horribles, yo no las pondría en mi comedor. Era claro que el arte decorativo no era lo suyo sino más bien lo contrario.</h3></li>
+    <li> <h2>Autoretrato expresionista</h2><img src="img/ATELIERTATACUADROS.jpg" alt="expresionismo sartre">
+    <h3>En su serie de retratos, también está su propia imagen, se destaca siempre la mirada de los protagonistas trazados en oleo.</h3></li>
+    <li> <h2>El bosque de entrada</h2><img src="img/FACHADACARTEL.jpg" alt="casa de sabato">
+    <h3>Una arboleda de once altos arboles, incluyen pinos, palmeras, una magnolia y una enorme araucaria. De afuera ya se puede sentir que la visita será especial</h3></li>
+    <li> <h2>El reloj Cucú</h2><img src="img/reloj-cucu.jpg" alt="reloj cucu">
+    <h3>Hasta sus últimos días, se escuchaba sonar la campana de este reloj.</h3></li>
+    <li> <h2>Matilde Kusminsky, su fiel compañera</h2> <img src="img/BIBLIOETCA3.jpg" alt="biblioteca">
+    <H3>En las visitas nunca dejamos de contar cuando Ernesto tuvo que ir a la madrugada y escapar a caballo junto a ella, porque los padres judíos no estaban de acuerdo con su amor</H3></li>
+    <li> <h2>Los eventos de la Casa</h2><img src="img/CASAILUMINADA (2).jpg" alt="casa iluminada">
+    <h3>Complementando la mirada hacia atrás en el pasado, la casa abre sus puertas y en los patios y jardines, invita a artistas emergentes y consagrados, a mostrar su arte y su mirada del presente y futuro.</h3></li>
+
  </div>
 
 
