--- a/fotos.html
+++ b/fotos.html
@@ -6,13 +6,22 @@
 
     <meta charset="UTF-8">
     <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
-    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
+    <meta name="keywords" content="paseos,cultura,sobre heroes y tumbas,el tunel,abbadon el exterminador,escritor,existencialismo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="enkg"/>
     <meta property="og:site_name" content="Casa Museo Ernesto Sabato" />
-    <meta property="og:video" content="Casa de Sabato.mp4"/>
+    <meta property="og:video" content="https://www.youtube.com/watch?v=RSTrFH0m21M"/>
+    <meta property="og:url" content="https://casadesabato.com" />
+    <link rel="canonical" href="https://casadesabato.com" />
+    <meta property=”og:type” content=”website” />
+    <meta property=”og:title” content=”La Casa Museo de Ernesto Sabato” />
 
-    <meta name="copyright" content="Propietario del copyright" />
+
+<meta property=”og:description” content=”Visitas guiadas por sus nietos a la casa de Ernesto Sabato” />
+
+<meta property=”og:image” content=”https://www.facebook.com/Casadesabato/photos/1904503769754263”/>
+
+    <meta name="copyright" content="Guido sabato" />
     <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, rerervar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -106,7 +115,7 @@
 
     <li><h2>Su anteojos</h2><img src="img/ESCRITORIOTATA.jpg"
          alt="escritorio">
-        <h3>En su escritorio, su rincón de creación, yacen los uno de los anteojos que Sabato usaba para trabajar</h3></li>
+        <h3>En su escritorio, su rincón de creación, yacen los anteojos que Sabato usaba para trabajar</h3></li>
     <li> <h2>
         El deseo de Ernesto.
     </h2><img src="img/sabato-pasilloentrada.jpg" alt="pasillo entrada">
