meta mas sitemap

--- a/fotos.html
+++ b/fotos.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="enkg"/>
     <meta property="og:site_name" content="Casa Museo Ernesto Sabato" />
-    <meta property="og:video" content="https://www.youtube.com/watch?v=RSTrFH0m21M"/>
+    <meta property="og:video" content="https://casadesabato.com/casa de sabato.mp4"/>
     <meta property="og:url" content="https://casadesabato.com" />
     <link rel="canonical" href="https://casadesabato.com" />
     <meta property=”og:type” content=”website” />
@@ -19,10 +19,10 @@
 
 <meta property=”og:description” content=”Visitas guiadas por sus nietos a la casa de Ernesto Sabato” />
 
-<meta property=”og:image” content=”https://www.facebook.com/Casadesabato/photos/1904503769754263”/>
+<meta property=”og:image” content=”https://casadesabato.com/img/fachadacartel.jpg”/>
 
     <meta name="copyright" content="Guido sabato" />
-    <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, rerervar acá</title>
+    <title>Casa Museo Ernesto Sabato. Visitas guiadas por sus nietos, reservar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         <!-- Google tag (gtag.js) -->
@@ -109,7 +109,6 @@
             <li><a href="index.html">Inicio</a></li>
         </ul>
     </nav>
-
     <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
     <div class="paginafotos">
 
