--- a/videos.html
+++ b/videos.html
@@ -118,14 +118,16 @@
 <li class="videoyoutube">
     <iframe  src="https://www.youtube.com/embed/zRSGu1ixLnY" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
 </li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/YW5adLysNLQ" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0">  </iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/SLNP369QE2s" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/3Zh3cIDcvuc" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/0vjmGbvg9wI" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/v8unX6JvaXA" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/as_cURm8neU" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/SLNP369QE2s" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-</div>
+<H2>TN (todo Noticias) En el camino. Recorremos la casa de Ernesto Sabato con su nieta.</H2>
+<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/YW5adLysNLQ" title="La casa museo de Ernesto Sabato" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0">  </iframe></li>
+<h2>Agencia Telam. La casa de Ernesto Sabato convertida en museo en memoria del autor de "Sobre Héroes y Tumbas"</h2>
+<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/SLNP369QE2s" title="La casa museo de Ernesto Sabato" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
+<h2>Canal 9 Inauguran el Museo Ernesto Sabato</h2>   
+<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/3Zh3cIDcvuc" title="La casa museo de Ernesto Sabato" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
+<h2>Vision 7. La casa de Ernesto Sabato abierta al público.</h2>
+<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/v8unX6JvaXA" title="La casa museo de Ernesto Sabato" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
+
+
 <script src="script.js" type="text/javascript"></script>
 </body>
 
