--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
     <div class="video-responsive">
 
-        <video controls poster="img/cartel entrada.jpg"         autoplay muted loop>
+        <video controls poster="https://casadesabato.com/img/fachadacartel.jpg"         autoplay muted loop>
 
             <source src="Casa de Sabato.mp4" alt="video institucional casa de sabato santos lugares" type="video/mp4">
             <source src="Casa de Sabato.ogg" alt="video casa de sabato" type="video/ogg">
