--- a/contacto.html
+++ b/contacto.html
@@ -5,36 +5,37 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
-    <meta name="keywords" content="paseos,cultura,sobre heroes y tumbas,el tunel,abbadon el exterminador,escritor,existencialismo">
+    <meta name="description"
+        content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
+    <meta name="keywords"
+        content="paseos,cultura,sobre heroes y tumbas,el tunel,abbadon el exterminador,escritor,existencialismo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="enkg"/>
+    <meta name="author" content="enkg" />
     <meta property="og:site_name" content="Casa Museo Ernesto Sabato" />
-    <meta property="og:video" content="https://casadesabato.com/casa de sabato.mp4"/>
+    <meta property="og:video" content="https://casadesabato.com/casa de sabato.mp4" />
     <meta property="og:url" content="https://casadesabato.com" />
     <link rel="canonical" href="https://casadesabato.com" />
     <meta property=”og:type” content=”website” />
     <meta property=”og:title” content=”La Casa Museo de Ernesto Sabato” />
-
-
-<meta property=”og:description” content=”Visitas guiadas por sus nietos a la casa de Ernesto Sabato” />
-
-<meta property=”og:image” content=”https://casadesabato.com/img/fachadacartel.jpg”/>
-
-    <meta name="copyright" content="Guido sabato" />
+    <meta property=”og:description” content=”Visitas guiadas por sus nietos a la casa de Ernesto Sabato” />
+    <meta property=”og:image” content=”https://casadesabato.com/img/fachadacartel.jpg”/> <meta name="copyright"
+        content="Guido sabato" />
     <title>Casa Museo Ernesto Sabato. Visitas guiadas por sus nietos, reservar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-        <!-- Google tag (gtag.js) -->
-        <link rel=“canonical” href=”http://casadesabato.com/index”/>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
 
-  gtag('config', 'G-LE6VKZR6N8');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-LE6VKZR6N8');
+    </script>
 </head>
 
 <body>
