--- a/360.html
+++ b/360.html
@@ -112,8 +112,11 @@
     </nav>
 
     <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
-<div>
-    <li class="video-responsive2"><iframe width="960" color="3" height="600" src="https://www.youtube.com/embed/as_cURm8neU" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel=0></iframe></li>
+<div class="recorrido360">
+    <h2>Recorrido 360</h2>
+    <h3>Gracias a la municipalidad de Tres de Febrero, podemos brindarles este recorrido virtual por la Casona de Santos Lugares.</h3>
+    <h4>Mueva el ratón para ir cambiando la perspectiva</h4>
+    <li class="video-responsive2"><iframe width="960" color="3" height="600" src="https://www.youtube.com/embed/as_cURm8neU" title="recorrido 360 casa de sabato" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel=0></iframe></li>
 
 </div>
 
