--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="fonts.css">
     <meta name="description"
         content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
     <meta name="keywords"
@@ -115,7 +116,11 @@
         <h1>La Casa Museo de Ernesto Sabato</h1>
     </div>
 
-
+<div class="social">
+    <a href="https://www.facebook.com/Casadesabato" class="icon icon-facebook2" target="_blank"></a>
+    <a href="https://www.instagram.com/casadesabato/" class="icon icon-instagram" target="_blank"></a>
+    <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'" class="icon icon-whatsapp" target="_blank"></a>
+</div>
 
     <div class="contenedor-cabecera">
         <li> <img class="sabato" src="img/sabato-santoslugares.jpg" alt="SABATO ESTACION santos lugares"></li>
