--- a/eventos.html
+++ b/eventos.html
@@ -12,13 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="enkg" />
     <meta property="og:site_name" content="Casa Museo Ernesto Sabato" />
-    <meta property="og:video" content="https://casadesabato.com/casa de sabato.mp4" />
+    <meta property="og:video" content="https://www.youtube.com/watch?v=RSTrFH0m21M" />
     <meta property="og:url" content="https://casadesabato.com" />
     <link rel="canonical" href="https://casadesabato.com" />
-    <meta property=”og:type” content=”website” />
-    <meta property=”og:title” content=”La Casa Museo de Ernesto Sabato” />
-    <meta property=”og:description” content=”Visitas guiadas por sus nietos a la casa de Ernesto Sabato” />
-    <meta property=”og:image” content=”https://casadesabato.com/img/fachadacartel.jpg”/> <meta name="copyright"
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="La Casa Museo de Ernesto Sabato" />
+    <meta property="og:description" content="Visitas guiadas por sus nietos a la casa de Ernesto Sabato" />
+    <meta property="og:image" content="https://casadesabato.com/img/fachadacartel.jpg"/> <meta name="copyright"
         content="Guido sabato" />
     <title>Casa Museo Ernesto Sabato. Visitas guiadas por sus nietos, reservar acá</title>
     <link rel="stylesheet" href="style.css">
