--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="description"
         content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
     <meta name="keywords"
-        content="paseos,cultura,sobre heroes y tumbas,el tunel,abbadon el exterminador,escritor,existencialismo">
+        content="paseos, cultura, sobre heroes y tumbas, el tunel, abbadon el exterminador, escritor, existencialismo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="enkg" />
     <meta property="og:site_name" content="Casa Museo Ernesto Sabato" />
-    <meta property="og:video" content="https://casadesabato.com/casa de sabato.mp4" />
+    <meta property="og:video" content="https://www.youtube.com/watch?v=RSTrFH0m21M" />
     <meta property="og:url" content="https://casadesabato.com" />
     <link rel="canonical" href="https://casadesabato.com" />
-    <meta property=”og:type” content=”website” />
-    <meta property=”og:title” content=”La Casa Museo de Ernesto Sabato” />
-    <meta property=”og:description” content=”Visitas guiadas por sus nietos a la casa de Ernesto Sabato” />
-    <meta property=”og:image” content=”https://casadesabato.com/img/fachadacartel.jpg”/> <meta name="copyright"
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="La Casa Museo de Ernesto Sabato" />
+    <meta property="og:description" content="Visitas guiadas por sus nietos a la casa de Ernesto Sabato" />
+    <meta property="og:image" content="https://casadesabato.com/img/fachadacartel.jpg"/> <meta name="copyright"
         content="Guido sabato" />
     <title>Casa Museo Ernesto Sabato. Visitas guiadas por sus nietos, reservar acá</title>
     <link rel="stylesheet" href="style.css">
@@ -152,7 +152,7 @@
 
     <div class="video-responsive">
 
-        <video controls poster="https://casadesabato.com/img/fachadacartel.jpg" autoplay muted loop>
+        <video controls poster="img/FACHADACARTEL.jpg" autoplay muted loop>
 
             <source src="Casa de Sabato.mp4" alt="video institucional casa de sabato santos lugares" type="video/mp4">
             <source src="Casa de Sabato.ogg" alt="video casa de sabato" type="video/ogg">
@@ -167,81 +167,81 @@
             <h2>El estudio de Pile</h2>
             <img src="img/estudio matilde.jpg" alt="estudio matilde" loading="lazy">
 
-            <h3>Así llamábamos sus nietos a Matilde Kusminsky la mujer de Ernesto de toda la vida. Este espacio también
-                oficiaba de living, o sala de estar, sobre todo los sábados cuando nos juntábamos toda la familia</h3>
+            <p>Así llamábamos sus nietos a Matilde Kusminsky la mujer de Ernesto de toda la vida. Este espacio también
+                oficiaba de living, o sala de estar, sobre todo los sábados cuando nos juntábamos toda la familia</p>
         </li>
         <li class="fotogaleria">
             <h2>La Casa de Ernesto Sabato</h2>
             <img src="img/casona frente saltos lugares.jpg" alt="casona frente saltos lugares" loading="lazy">
-            <h3>En el año 1945 se instala definitivamente en esta casa del barrio de Santos Lugares, que por entonces
+            <p>En el año 1945 se instala definitivamente en esta casa del barrio de Santos Lugares, que por entonces
                 era un pueblito de la Provincia de Buenos Aires. Quizás por el parecido de su casa de Rojas donde nació
-                y se crió junto a sus 10 hermanos varones. </h3>
+                y se crió junto a sus 10 hermanos varones. </p>
         </li>
 
         <li class="fotogaleria">
             <h2>La máquina de escribir de Matilde</h2>
             <img src="img/maquina de escribir.jpg" alt="maquina de escribir" loading="lazy">
-            <h3>Si bien MAtilde Kusminsky no quiso editar nunca sus maravillosos cuentos y poesías, la familia decide
+            <p>Si bien MAtilde Kusminsky no quiso editar nunca sus maravillosos cuentos y poesías, la familia decide
                 hacerlo en dos libros "El conjuro" y "Cenizas y Plegarias"
                 Además de evitar que Ernesto quemara la novela "sobre Heroes y Tumbas, era su editora y primera lectora
                 del work in progress de su compañero de vida."
-            </h3>
+            </p>
         </li>
         <li class="fotogaleria">
             <h2>El rincón del escritor ganador del premio Cervantes</h2>
             <img src="img/jaime torres charango reyes españa premio cervantes literatura.jpg"
                 alt="jaime torres charango reyes españa premio cervantes literatura" loading="lazy">
-            <H3>Si bien esta máquina es eléctrica, toda una modernidad para la época en la cual la adquirió, nunca pudo
+            <p>Si bien esta máquina es eléctrica, toda una modernidad para la época en la cual la adquirió, nunca pudo
                 acostumbrarse a escribir en una computadora, la cual intentó usar cuando desde la editoria Seix Barral
                 le mandaron una, para que pueda terminas el libro "Antes del Fin", que terminó escribiendo finalmente
                 con esa máquina Olivetti.
                 El charango que le regaló Jaime Torres, la foto con los reyes de España, luego de entregarle el premio
-                Cervantes.</H3>
+                Cervantes.</p>
         </li>
         <li class="fotogaleria">
             <h2>Las biblioetecas de la Casona de Santos Lugares</h2>
             <img src="img/clasicos literarios latinoamericanos.jpg" alt="clasicos literarios latinoamericanos"
                 loading="lazy">
-            <h3>Los miles de libros de las bibliotecas están en el mismo orden que Ernesto Sabato los dejó. Todos los
+            <p>Los miles de libros de las bibliotecas están en el mismo orden que Ernesto Sabato los dejó. Todos los
                 libros tienen la intervención de Ernesto y Matilde, que subrayaban y anotaban en sus lecturas. También
                 se pueden leer dedicatorias a los dueños de casa, de escritores que regalaban su último libro, y que hoy
-                son clásicos de la Literatura, como por ejemplo Albert Camus.</h3>
+                son clásicos de la Literatura, como por ejemplo Albert Camus.</p>
         </li>
         <li class="fotogaleria">
             <h2>Sabato y la pintura</h2>
             <img src="img/pinturas expresionismo sartre.jpg" alt="pinturas expresionismo sartre" loading="lazy">
-            <h3>Sus pinturas al oleo son oscuras como su obra literaria. Son alrededor de 70 obras que alguna vez expuso
+            <p>Sus pinturas al oleo son oscuras como su obra literaria. Son alrededor de 70 obras que alguna vez expuso
                 en el Centre Pompideu en París. Se destaca su serie de retratos, y aquí vemos a Jean-Paul Sartre,
-                referente para Ernesto, en el compromiso de un escritor con la realidad política y social.</h3>
+                referente para Ernesto, en el compromiso de un escritor con la realidad política y social.</p>
         </li>
         <li class="fotogaleria">
-            <H2>Sabato y sus horarios de campo</H2>
+            <h2>Sabato y sus horarios de campo</h2>
             <img src="img/ernesto sabato penunmbra.jpg" alt="ernesto sabato penunmbra" loading="lazy">>
-            <H3>Dejar entrar la luz del sol que poco a poco va saliendo, al igual que dejar entrar la noche hasta quedar
+            <p>Dejar entrar la luz del sol que poco a poco va saliendo, al igual que dejar entrar la noche hasta quedar
                 en la penumbra. Ernesto se levantaba a las 4 30 de la mañana, se hacía un Te, y lo bebía con la estatua
-                de Ceres detrás de su ventana.</H3>
+                de Ceres detrás de su ventana.</p>
         </li>
         <li class="fotogaleria">
             <h2>La casona y su arboleda</h2>
             <img src="img/patio araucaria tango troilo decaro.jpg" alt="patio araucaria tango troilo decaro"
                 loading="lazy">>
-            <h3>Santos Lugares era una zona de quintas antes de ir convirtiéndose en un pueblito de la Provincia de
+            <p>Santos Lugares era una zona de quintas antes de ir convirtiéndose en un pueblito de la Provincia de
                 Buenos Aires. La casa mantiene once de estos enormes árboles, que incluyen una magestuosa Araucaria. El
-                patio tiene farolitos y baldosas negras y blancas, dandole un espíritu Tanguero.</h3>
+                patio tiene farolitos y baldosas negras y blancas, dandole un espíritu Tanguero.</p>
         </li>
 
         <li class="fotogaleria">
             <h2>Federico Valle y el Cine Argentino</h2>
             <img src="img/maquina escribir sabato olivetti.jpg" alt="maquina escribir sabato olivetti" loading="lazy">
-            <h3>Este estudio fue aluna vez un estudio de Cine, donde todas las paredes no eran sino de vidrio y hacían
+            <p>Este estudio fue aluna vez un estudio de Cine, donde todas las paredes no eran sino de vidrio y hacían
                 de este lugar una especie de jardín de invierno cinematográfico, donde se filmaron algunas escenas de la
-                época de oro de nuestro cine.</h3>
+                época de oro de nuestro cine.</p>
         </li>
         <li class="fotogaleria">
-            <H2>El atelier</H2>
+            <h2>El atelier</h2>
             <img src="img/ATELIERCONTATA.jpg" alt="pinturas Friedrich Nietzsche" loading="lazy">
-            <H3>Fue su espacio de trabajo y refugio en el sus últimos años. Su primera pasión que inició en los jardines
-                de la Escuela Nacional de La plata, sería también la última</H3>
+            <p>Fue su espacio de trabajo y refugio en el sus últimos años. Su primera pasión que inició en los jardines
+                de la Escuela Nacional de La plata, sería también la última</p>
         </li>
 
     </div>
