--- a/fotos.html
+++ b/fotos.html
@@ -65,7 +65,7 @@
                                 aproximádamente una hora y media. 
                                 Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167 7626.</h2>
                         </div>
-                        <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" loading="lazy"></div>
+                        <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" ></div>
                         <div class="botonwassap">
                             <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64"
                                 height="64" alt="Whatsapp"
@@ -80,15 +80,15 @@
                 <ul class="submenu">
                     <li class="comollegar">
                         <li class="textomapa">
-                            <h2>A solo 200 metros de la est. Santos Lugares,
+                            <p>A solo 200 metros de la est. Santos Lugares,
                                 colectivos 161 y 105.
                                 A 800 metros de Gral. Paz
-                            </h2>
+                            </p>
                         </li>
                         <li class="mapa">
                              <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.060640139065!2d-58.540191384308294!3d-34.60262808045979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7ecadf915bf%3A0xb5f74d0c51431f01!2sCasa%20Museo%20Ernesto%20S%C3%A1bato.!5e0!3m2!1ses!2sar!4v1659023684172!5m2!1ses!2sar"
-                                width="600" height="400" style="border: 20px;" allowfullscreen="" loading="lazy"
+                                width="600" height="400" style="border: 20px;" allowfullscreen="" 
                                 referrerpolicy="no-referrer-when-downgrade"
                                 ></iframe>
 
