--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="La Casa Museo de Ernesto Sabato" />
     <meta property="og:description" content="Visitas guiadas por sus nietos a la casa de Ernesto Sabato" />
-    <meta property="og:image" content="https://casadesabato.com/img/fachadacartel.jpg"/> <meta name="copyright"
-        content="Guido sabato" />
+    <meta property="og:image" content="https://casadesabato.com/img/fachadacartel.jpg" />
+    <meta name="copyright" content="Guido sabato" />
     <title>Casa Museo Ernesto Sabato. Visitas guiadas por sus nietos, reservar acá</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel='stylesheet'>
     <!-- Google tag (gtag.js) -->
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
@@ -67,7 +67,7 @@
                                 aproximádamente una hora y media.
                                 Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167 7626.</h2>
                         </div>
-                        <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" loading="lazy"></div>
+                        <div class="telefono"> <img src="img/telefono.jpg" alt="telefono"></div>
                         <div class="botonwassap">
                             <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64"
                                 height="64" alt="Whatsapp"
@@ -90,7 +90,7 @@
                     <li class="mapa">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.060640139065!2d-58.540191384308294!3d-34.60262808045979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7ecadf915bf%3A0xb5f74d0c51431f01!2sCasa%20Museo%20Ernesto%20S%C3%A1bato.!5e0!3m2!1ses!2sar!4v1659023684172!5m2!1ses!2sar"
-                            width="600" height="400" style="border: 20px;" allowfullscreen="" loading="lazy"
+                            width="600" height="400" style="border: 20px;" allowfullscreen=""
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                     </li>
@@ -116,11 +116,12 @@
         <h1>La Casa Museo de Ernesto Sabato</h1>
     </div>
 
-<div class="social">
-    <a href="https://www.facebook.com/Casadesabato" class="icon icon-facebook2" target="_blank"></a>
-    <a href="https://www.instagram.com/casadesabato/" class="icon icon-instagram" target="_blank"></a>
-    <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'" class="icon icon-whatsapp" target="_blank"></a>
-</div>
+    <div class="social">
+        <a href="https://www.facebook.com/Casadesabato" class="icon icon-facebook2" target="_blank"></a>
+        <a href="https://www.instagram.com/casadesabato/" class="icon icon-instagram" target="_blank"></a>
+        <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'"
+            class="icon icon-whatsapp" target="_blank"></a>
+    </div>
 
     <div class="contenedor-cabecera">
         <li> <img class="sabato" src="img/sabato-santoslugares.jpg" alt="SABATO ESTACION santos lugares"></li>
@@ -165,14 +166,14 @@
     <div class="grid">
         <li class="fotogaleria">
             <h2>El estudio de Pile</h2>
-            <img src="img/estudio matilde.jpg" alt="estudio matilde" loading="lazy">
+            <img src="img/estudio matilde.jpg" alt="estudio matilde">
 
             <p>Así llamábamos sus nietos a Matilde Kusminsky la mujer de Ernesto de toda la vida. Este espacio también
                 oficiaba de living, o sala de estar, sobre todo los sábados cuando nos juntábamos toda la familia</p>
         </li>
         <li class="fotogaleria">
             <h2>La Casa de Ernesto Sabato</h2>
-            <img src="img/casona frente saltos lugares.jpg" alt="casona frente saltos lugares" loading="lazy">
+            <img src="img/casona frente saltos lugares.jpg" alt="casona frente saltos lugares">
             <p>En el año 1945 se instala definitivamente en esta casa del barrio de Santos Lugares, que por entonces
                 era un pueblito de la Provincia de Buenos Aires. Quizás por el parecido de su casa de Rojas donde nació
                 y se crió junto a sus 10 hermanos varones. </p>
@@ -180,7 +181,7 @@
 
         <li class="fotogaleria">
             <h2>La máquina de escribir de Matilde</h2>
-            <img src="img/maquina de escribir.jpg" alt="maquina de escribir" loading="lazy">
+            <img src="img/maquina de escribir.jpg" alt="maquina de escribir">
             <p>Si bien MAtilde Kusminsky no quiso editar nunca sus maravillosos cuentos y poesías, la familia decide
                 hacerlo en dos libros "El conjuro" y "Cenizas y Plegarias"
                 Además de evitar que Ernesto quemara la novela "sobre Heroes y Tumbas, era su editora y primera lectora
@@ -190,7 +191,7 @@
         <li class="fotogaleria">
             <h2>El rincón del escritor ganador del premio Cervantes</h2>
             <img src="img/jaime torres charango reyes españa premio cervantes literatura.jpg"
-                alt="jaime torres charango reyes españa premio cervantes literatura" loading="lazy">
+                alt="jaime torres charango reyes españa premio cervantes literatura">
             <p>Si bien esta máquina es eléctrica, toda una modernidad para la época en la cual la adquirió, nunca pudo
                 acostumbrarse a escribir en una computadora, la cual intentó usar cuando desde la editoria Seix Barral
                 le mandaron una, para que pueda terminas el libro "Antes del Fin", que terminó escribiendo finalmente
@@ -200,8 +201,7 @@
         </li>
         <li class="fotogaleria">
             <h2>Las biblioetecas de la Casona de Santos Lugares</h2>
-            <img src="img/clasicos literarios latinoamericanos.jpg" alt="clasicos literarios latinoamericanos"
-                loading="lazy">
+            <img src="img/clasicos literarios latinoamericanos.jpg" alt="clasicos literarios latinoamericanos">
             <p>Los miles de libros de las bibliotecas están en el mismo orden que Ernesto Sabato los dejó. Todos los
                 libros tienen la intervención de Ernesto y Matilde, que subrayaban y anotaban en sus lecturas. También
                 se pueden leer dedicatorias a los dueños de casa, de escritores que regalaban su último libro, y que hoy
@@ -209,22 +209,21 @@
         </li>
         <li class="fotogaleria">
             <h2>Sabato y la pintura</h2>
-            <img src="img/pinturas expresionismo sartre.jpg" alt="pinturas expresionismo sartre" loading="lazy">
+            <img src="img/pinturas expresionismo sartre.jpg" alt="pinturas expresionismo sartre">
             <p>Sus pinturas al oleo son oscuras como su obra literaria. Son alrededor de 70 obras que alguna vez expuso
                 en el Centre Pompideu en París. Se destaca su serie de retratos, y aquí vemos a Jean-Paul Sartre,
                 referente para Ernesto, en el compromiso de un escritor con la realidad política y social.</p>
         </li>
         <li class="fotogaleria">
             <h2>Sabato y sus horarios de campo</h2>
-            <img src="img/ernesto sabato penunmbra.jpg" alt="ernesto sabato penunmbra" loading="lazy">>
+            <img src="img/ernesto sabato penunmbra.jpg" alt="ernesto sabato penunmbra">
             <p>Dejar entrar la luz del sol que poco a poco va saliendo, al igual que dejar entrar la noche hasta quedar
                 en la penumbra. Ernesto se levantaba a las 4 30 de la mañana, se hacía un Te, y lo bebía con la estatua
                 de Ceres detrás de su ventana.</p>
         </li>
         <li class="fotogaleria">
             <h2>La casona y su arboleda</h2>
-            <img src="img/patio araucaria tango troilo decaro.jpg" alt="patio araucaria tango troilo decaro"
-                loading="lazy">>
+            <img src="img/patio araucaria tango troilo decaro.jpg" alt="patio araucaria tango troilo decaro">
             <p>Santos Lugares era una zona de quintas antes de ir convirtiéndose en un pueblito de la Provincia de
                 Buenos Aires. La casa mantiene once de estos enormes árboles, que incluyen una magestuosa Araucaria. El
                 patio tiene farolitos y baldosas negras y blancas, dandole un espíritu Tanguero.</p>
@@ -232,34 +231,38 @@
 
         <li class="fotogaleria">
             <h2>Federico Valle y el Cine Argentino</h2>
-            <img src="img/maquina escribir sabato olivetti.jpg" alt="maquina escribir sabato olivetti" loading="lazy">
+            <img src="img/maquina escribir sabato olivetti.jpg" alt="maquina escribir sabato olivetti">
             <p>Este estudio fue aluna vez un estudio de Cine, donde todas las paredes no eran sino de vidrio y hacían
                 de este lugar una especie de jardín de invierno cinematográfico, donde se filmaron algunas escenas de la
                 época de oro de nuestro cine.</p>
         </li>
         <li class="fotogaleria">
             <h2>El atelier</h2>
-            <img src="img/ATELIERCONTATA.jpg" alt="pinturas Friedrich Nietzsche" loading="lazy">
+            <img src="img/ATELIERCONTATA.jpg" alt="pinturas Friedrich Nietzsche">
             <p>Fue su espacio de trabajo y refugio en el sus últimos años. Su primera pasión que inició en los jardines
                 de la Escuela Nacional de La plata, sería también la última</p>
         </li>
 
     </div>
+    
+    <footer>
+        <h2>Visitas Guiadas por Guido y Luciana Sabato, nietos del escritor.</h2>
+        <p>En las visitas hablamos de la vida del escritor, su paso por el comunismo, por la física y el laboratorio
+            Madam
+            Curie, la CONADEP y su trabajo para enjuiciar a las juntas militares en el retorno a la democrácia, junto a
+            Alfonsín. También hablamos del surrealismo y el existencialismo, sus últimos años en los cuales se sumergió
+            en
+            la pintura expresionista, en su atelier que construyó especialmente a partir de los consejos de Soldi y
+            Berni.
+            Su amistad con Thomas Mann y Albert Camus, así como cuando escribió los tangos con Anibal Troilo y De Caro,
+            o
+            sus exhibiciones con Eduardo Falu y Mercedes Sosa, en el Romance de la muerte de Juan Lavalle.
+            Para reservar escribir al 11361 49927</p>
+
+
+    </footer>
+
     <script src="script.js" type="text/javascript"></script>
 </body>
-
-<footer>
-    <h2>En las visitas hablamos de la vida del escritor, su paso por el comunismo, por la física y el laboratorio Madam
-        Curie, la CONADEP y su trabajo para enjuiciar a las juntas militares en el retorno a la democrácia, junto a
-        Alfonsín. También hablamos del surrealismo y el existencialismo, sus últimos años en los cuales se sumergió en
-        la pintura expresionista, en su atelier que construyó especialmente a partir de los consejos de Soldi y Berni.
-        Su amistad con Thomas Mann y Albert Camus, así como cuando escribió los tangos con Anibal Troilo y De Caro, o
-        sus exhibiciones con Eduardo Falu y Mercedes Sosa, en el Romance de la muerte de Juan Lavalle.
-        Para reservar escribir al 11361 49927</h2>
-
-
-</footer>
-
-
 
 </html>
