--- a/videos.html
+++ b/videos.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
     <meta name="keywords"
-        content="paseos,cultura,sobre heroes y tumbas,el tunel,abbadon el exterminador,escritor,existencialismo">
+        content="paseos, cultura, sobre heroes y tumbas, el tunel, abbadon el exterminador, escritor, existencialismo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="enkg" />
     <meta property="og:site_name" content="Casa Museo Ernesto Sabato" />
@@ -18,11 +18,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="La Casa Museo de Ernesto Sabato" />
     <meta property="og:description" content="Visitas guiadas por sus nietos a la casa de Ernesto Sabato" />
-    <meta property="og:image" content="https://casadesabato.com/img/fachadacartel.jpg"/> <meta name="copyright"
-        content="Guido sabato" />
+    <meta property="og:image" content="https://casadesabato.com/img/fachadacartel.jpg" />
+    <meta name="copyright" content="Guido sabato" />
     <title>Casa Museo Ernesto Sabato. Visitas guiadas por sus nietos, reservar acá</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel='stylesheet'>
     <!-- Google tag (gtag.js) -->
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
@@ -42,17 +42,18 @@
 
     <nav id="nav" class="main-nav">
         <div class="nav-links">
-          <a class="link-item" href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio">Reservar</a>
-          <a class="link-item" href="https://goo.gl/maps/GsVNLrzguBi7ZpK26">Llegar</a>
-          <a class="link-item" href="fotos.html">Media</a>
-          <a class="link-item" href="contacto.html">Contacto</a>
+            <a class="link-item"
+                href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio">Reservar</a>
+            <a class="link-item" href="https://goo.gl/maps/GsVNLrzguBi7ZpK26">Llegar</a>
+            <a class="link-item" href="fotos.html">Media</a>
+            <a class="link-item" href="contacto.html">Contacto</a>
         </div>
-      </nav>
-      <button id="button-menu" class="button-menu">
+    </nav>
+    <button id="button-menu" class="button-menu">
         <span></span>
         <span></span>
         <span></span>
-      </button>
+    </button>
 
     <nav id="navegador">
         <ul class="menu">
@@ -62,10 +63,10 @@
                     <li class="reservar">
                         <div class="textoreservar">
                             <h2>Las visitas son los días Sábados a las 15 horas solo reservando por wassap. Duran
-                                aproximádamente una hora y media. 
+                                aproximádamente una hora y media.
                                 Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167 7626.</h2>
                         </div>
-                        <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" loading="lazy"></div>
+                        <div class="telefono"> <img src="img/telefono.jpg" alt="telefono"></div>
                         <div class="botonwassap">
                             <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64"
                                 height="64" alt="Whatsapp"
@@ -79,55 +80,69 @@
 
                 <ul class="submenu">
                     <li class="comollegar">
-                        <li class="textomapa">
-                            <h2>A solo 200 metros de la est. Santos Lugares,
-                                colectivos 161 y 105.
-                                A 800 metros de Gral. Paz
-                            </h2>
-                        </li>
-                        <li class="mapa">
-                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.060640139065!2d-58.540191384308294!3d-34.60262808045979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7ecadf915bf%3A0xb5f74d0c51431f01!2sCasa%20Museo%20Ernesto%20S%C3%A1bato.!5e0!3m2!1ses!2sar!4v1659023684172!5m2!1ses!2sar"
-                                width="600" height="400" style="border: 20px;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"
-                                ></iframe>
-
-                        </li>
+                    <li class="textomapa">
+                        <p>A solo 200 metros de la est. Santos Lugares,
+                            colectivos 161 y 105.
+                            A 800 metros de Gral. Paz
+                        </p>
                     </li>
-                </ul>
+                    <li class="mapa">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.060640139065!2d-58.540191384308294!3d-34.60262808045979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7ecadf915bf%3A0xb5f74d0c51431f01!2sCasa%20Museo%20Ernesto%20S%C3%A1bato.!5e0!3m2!1ses!2sar!4v1659023684172!5m2!1ses!2sar"
+                            width="600" height="400" style="border: 20px;" allowfullscreen=""
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    </li>
             </li>
-            <li>
-                <a href="fotos.html">Media
+        </ul>
+        </li>
+        <li>
+            <a href="fotos.html">Media
                 <ul class="submenu">
                     <li><a href="videos.html">Videos</a> </li>
                     <li><a href="fotos.html">Fotos</a></li>
                     <li><a href="360.html">360</a></li>
                 </ul>
             </a>
-            </li>
-            <li><a href="eventos.html">Eventos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="index.html">Inicio</a></li>
+        </li>
+        <li><a href="eventos.html">Eventos</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="index.html">Inicio</a></li>
         </ul>
     </nav>
 
-    <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
+    <div class="titulo">
+        <h1>La Casa Museo de Ernesto Sabato</h1>
+    </div>
 
 
 
     <div class="gridvideos">
 
-<H2>TN (todo Noticias) En el camino. Recorremos la casa de Ernesto Sabato con su nieta.</H2>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/YW5adLysNLQ" title="La casa museo de Ernesto Sabato" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0">  </iframe></li>
-<h2>Agencia Telam. La casa de Ernesto Sabato convertida en museo en memoria del autor de "Sobre Héroes y Tumbas"</h2>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/SLNP369QE2s" title="La casa museo de Ernesto Sabato" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<h2>Canal 9 Inauguran el Museo Ernesto Sabato</h2>   
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/3Zh3cIDcvuc" title="La casa museo de Ernesto Sabato" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<h2>Vision 7. La casa de Ernesto Sabato abierta al público.</h2>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/v8unX6JvaXA" title="La casa museo de Ernesto Sabato" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
+        <H2>TN (todo Noticias) En el camino. Recorremos la casa de Ernesto Sabato con su nieta.</H2>
+        <li class="videoyoutube"><iframe src="https://www.youtube.com/embed/YW5adLysNLQ"
+                title="La casa museo de Ernesto Sabato" frameborder="0"
+                allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                rel="0"> </iframe></li>
+        <h2>Agencia Telam. La casa de Ernesto Sabato convertida en museo en memoria del autor de "Sobre Héroes y Tumbas"
+        </h2>
+        <li class="videoyoutube"><iframe src="https://www.youtube.com/embed/SLNP369QE2s"
+                title="La casa museo de Ernesto Sabato" frameborder="0"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                rel="0"></iframe></li>
+        <h2>Canal 9 Inauguran el Museo Ernesto Sabato</h2>
+        <li class="videoyoutube"><iframe src="https://www.youtube.com/embed/3Zh3cIDcvuc"
+                title="La casa museo de Ernesto Sabato" frameborder="0"
+                allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                rel="0"></iframe></li>
+        <h2>Vision 7. La casa de Ernesto Sabato abierta al público.</h2>
+        <li class="videoyoutube"><iframe src="https://www.youtube.com/embed/v8unX6JvaXA"
+                title="La casa museo de Ernesto Sabato" frameborder="0"
+                allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                rel="0"></iframe></li>
 
 
-<script src="script.js" type="text/javascript"></script>
+        <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
