--- a/contacto.html
+++ b/contacto.html
@@ -115,13 +115,12 @@
 
 
 
-        <form name="contact" method="post" class="formulario-email" data-netlify="true">
+        <form name="contact" method="post" class="formulario-email" target="_blank" action="exito.html" data-netlify="true">
 
 
             <div class="campo">
                 <label for="emailAddress">Tu dirección de correo electrónico</label>
-                <input id="emailAddress" type="email" size="50" maxlength="50" required placeholder=""
-                    pattern=".+@beststartupever\.com" title="" />
+                <input id="emailAddress" type="email" size="50" maxlength="50"/>
             </div>
 
 
@@ -131,13 +130,13 @@
                 <textarea class="textarea" id="message" cols="50" rows="8" required placeholder=""></textarea>
             </div>
 
-            <button type="submit" value="Enviar" class="formulario-btn">Enviar</button>
+            <button type="submit" value="Enviar"  class="formulario-btn">Enviar</button>
         </form>
         <h3>Nos comunicaremos a la brevedad</h3>
 
 
 
-        <div class="correo"> <img src="img/correo.jpg" alt="corre sabato"></div>
+        <div class="correo"> <img src="img/correo.jpg" alt="correo sabato"></div>
     </div>
     <script src="script.js" type="text/javascript"></script>
 </body>
