--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="link-item" href="contacto.html">Contacto</a>
         </div>
     </nav>
-    <button id="button-menu" class="button-menu">
+    <button id="button-menu" class="button-menu" name="menu">
         <span></span>
         <span></span>
         <span></span>
@@ -206,7 +206,7 @@
                 libros tienen la intervención de Ernesto y Matilde, que subrayaban y anotaban en sus lecturas. También
                 se pueden leer dedicatorias a los dueños de casa, de escritores que regalaban su último libro, y que hoy
                 son clásicos de la Literatura, como por ejemplo Albert Camus.</p>
-        </li>
+        </li>g
         <li class="fotogaleria">
             <h2>Sabato y la pintura</h2>
             <img src="img/pinturas expresionismo sartre.jpg" alt="pinturas expresionismo sartre">
