--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
     </div>
 
     <div class="social">
-        <a href="https://www.facebook.com/Casadesabato" class="icon icon-facebook2" target="_blank"></a>
-        <a href="https://www.instagram.com/casadesabato/" class="icon icon-instagram" target="_blank"></a>
-        <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'"
+        <a href="https://www.facebook.com/Casadesabato" aria-label="facebook page" class="icon icon-facebook2" target="_blank"></a>
+        <a href="https://www.instagram.com/casadesabato/" aria-label="instagram page" class="icon icon-instagram" target="_blank"></a>
+        <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'" aria-label="instagram page"
             class="icon icon-whatsapp" target="_blank"></a>
     </div>
 
     <ul class="contenedor-cabecera">
-        <li> <img class="sabato" src="img/sabato-santoslugares.webp" alt="SABATO ESTACION santos lugares"></li>
-        <li class="firma">
+        <li> <img  src="img/sabato-santoslugares.webp" alt="SABATO ESTACION santos lugares"></li>
+        <li>
             <img src="img/Firma-sabato.webp" alt="firmasabato">
 
         </li>
