--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     </div>
 
-    <div class="grid">
+    <ul class="grid">
         <li class="fotogaleria">
             <h2>El estudio de Pile</h2>
             <img src="img/estudio matilde.webp" alt="estudio matilde">
@@ -244,7 +244,7 @@
                 de la Escuela Nacional de La plata, sería también la última</p>
         </li>
 
-    </div>
+    </ul>
     
     <footer>
         <div class="footer__text">
