--- a/videos.html
+++ b/videos.html
@@ -5,21 +5,22 @@
 <head>
 
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="fonts.css">
     <meta name="description"
         content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
     <meta name="keywords"
         content="paseos, cultura, sobre heroes y tumbas, el tunel, abbadon el exterminador, escritor, existencialismo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="enkg" />
-    <meta property="og:site_name" content="Casa Museo Ernesto Sabato" />
-    <meta property="og:video" content="https://www.youtube.com/watch?v=RSTrFH0m21M" />
-    <meta property="og:url" content="https://casadesabato.com" />
-    <link rel="canonical" href="https://casadesabato.com" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="La Casa Museo de Ernesto Sabato" />
-    <meta property="og:description" content="Visitas guiadas por sus nietos a la casa de Ernesto Sabato" />
-    <meta property="og:image" content="https://casadesabato.com/img/fachadacartel.webp" />
-    <meta name="copyright" content="Guido sabato" />
+    <meta name="author" content="enkg"/>
+    <meta property="og:site_name" content="Casa Museo Ernesto Sabato"/>
+    <meta property="og:video" content="https://www.youtube.com/watch?v=RSTrFH0m21M"/>
+    <meta property="og:url" content="https://casadesabato.com"/>
+    <link rel="canonical" href="https://casadesabato.com"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="La Casa Museo de Ernesto Sabato"/>
+    <meta property="og:description" content="Visitas guiadas por sus nietos a la casa de Ernesto Sabato"/>
+    <meta property="og:image" content="https://casadesabato.com/img/fachadacartel.webp"/>
+    <meta name="copyright" content="Guido sabato"/>
     <title>Casa Museo Ernesto Sabato. Visitas guiadas por sus nietos, reservar acá</title>
     <link rel="stylesheet" href="style.css">
  
@@ -95,9 +96,9 @@
                     </li>
             </li>
         </ul>
-        </li>
+        
         <li>
-            <a href="fotos.html">Media
+            <a href="#">Media
                 <ul class="submenu">
                     <li><a href="videos.html">Videos</a> </li>
                     <li><a href="fotos.html">Fotos</a></li>
