--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 </head>
 
 <body>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0" nonce="GHee4sYv"></script>
 
     <nav id="nav" class="main-nav">
         <div class="nav-links">
@@ -118,7 +120,7 @@
     </div>
 
     <div class="social">
-        <a href="https://www.facebook.com/Casadesabato" aria-label="facebook page" class="icon icon-facebook2" target="_blank"></a>
+        <a href="#fb-scroll" aria-label="facebook page" class="icon icon-facebook2"></a>
         <a href="https://www.instagram.com/casadesabato/" aria-label="instagram page" class="icon icon-instagram" target="_blank"></a>
         <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'" aria-label="instagram page"
             class="icon icon-whatsapp" target="_blank"></a>
@@ -247,6 +249,11 @@
     </ul>
     
     <footer>
+
+        <div class="fb-container" id="fb-scroll">
+
+        <div class="fb-page" data-href="https://www.facebook.com/Casadesabato/" data-tabs="timeline" data-width="500px" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Casadesabato/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Casadesabato/">La casa de Ernesto Sabato.</a></blockquote></div>
+    </div>
         <div class="footer__text">
         
         <h2>Visitas Guiadas por Guido y Luciana Sabato, nietos del escritor.</h2>
