--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             Su amistad con Thomas Mann y Albert Camus, así como cuando escribió los tangos con Anibal Troilo y De Caro,
             o
             sus exhibiciones con Eduardo Falu y Mercedes Sosa, en el Romance de la muerte de Juan Lavalle.
-            Para reservar escribir al 11361 49927</p>
+            Para reservar escribir al 11361 49927 o 11 6167 7626</p>
 
         </div>
     </footer>
