--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
 
     <div class="social">
-        <div id="TA_excellent285" class="TA_excellent"><ul id="orytQFrq" class="TA_links jXiGF14cvaS"><li id="xyhDc19KTgJi" class="aA7pSI1"><a target="_blank" href="https://www.tripadvisor.com.ar/Attraction_Review-g312741-d7352008-Reviews-La_Casa_de_Ernesto_Sabato-Buenos_Aires_Capital_Federal_District.html"><img src="https://static.tacdn.com/img2/brand_refresh/Tripadvisor_lockup_horizontal_secondary_registered.svg" alt="TripAdvisor" class="widEXCIMG" id="CDSWIDEXCLOGO"/></a></li></ul></div><script async src="https://www.jscache.com/wejs?wtype=excellent&amp;uniq=285&amp;locationId=7352008&amp;lang=es_AR&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
+        <div id="TA_socialButtonBubbles604" class="TA_socialButtonBubbles"><ul id="JKtHZ2U" class="TA_links 8s02pMyEdgbc"><li id="TqtYxUmH" class="TdLKxBL"><a target="_blank" href="https://www.tripadvisor.com.ar/Attraction_Review-g312741-d7352008-Reviews-La_Casa_de_Ernesto_Sabato-Buenos_Aires_Capital_Federal_District.html"><img src="https://static.tacdn.com/img2/brand_refresh/Tripadvisor_logomark.svg"/></a></li></ul></div><script async src="https://www.jscache.com/wejs?wtype=socialButtonBubbles&amp;uniq=604&amp;locationId=7352008&amp;color=green&amp;size=sm&amp;lang=es_AR&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
         <a href="#fb-scroll" aria-label="facebook page" class="icon icon-facebook2"></a>
         <a href="https://www.instagram.com/casadesabato/" aria-label="instagram page" class="icon icon-instagram" target="_blank"></a>
         <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'" aria-label="instagram page"
