--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
     <ul class="grid">
         <li class="fotogaleria">
             <h2>El estudio de Pile</h2>
-            <img src="img/estudio matilde.webp" alt="estudio matilde">
+            <img src="img/estudio matilde.webp" alt="estudio matilde" loading="lazy">
 
             <p>Así llamábamos sus nietos a Matilde Kusminsky la mujer de Ernesto de toda la vida. Este espacio también
                 oficiaba de living, o sala de estar, sobre todo los sábados cuando nos juntábamos toda la familia</p>
         </li>
         <li class="fotogaleria">
             <h2>La Casa de Ernesto Sabato</h2>
-            <img src="img/casona frente saltos lugares.webp" alt="casona frente saltos lugares">
+            <img src="img/casona frente saltos lugares.webp" alt="casona frente saltos lugares" loading="lazy">
             <p>En el año 1945 se instala definitivamente en esta casa del barrio de Santos Lugares, que por entonces
                 era un pueblito de la Provincia de Buenos Aires. Quizás por el parecido de su casa de Rojas donde nació
                 y se crió junto a sus 10 hermanos varones. </p>
@@ -186,7 +186,7 @@
 
         <li class="fotogaleria">
             <h2>La máquina de escribir de Matilde</h2>
-            <img src="img/maquina de escribir.webp" alt="maquina de escribir">
+            <img src="img/maquina de escribir.webp" alt="maquina de escribir" loading="lazy">
             <p>Si bien MAtilde Kusminsky no quiso editar nunca sus maravillosos cuentos y poesías, la familia decide
                 hacerlo en dos libros "El conjuro" y "Cenizas y Plegarias"
                 Además de evitar que Ernesto quemara la novela "sobre Heroes y Tumbas, era su editora y primera lectora
@@ -196,7 +196,7 @@
         <li class="fotogaleria">
             <h2>El rincón del escritor ganador del premio Cervantes</h2>
             <img src="img/jaime torres charango reyes españa premio cervantes literatura.webp"
-                alt="jaime torres charango reyes españa premio cervantes literatura">
+                alt="jaime torres charango reyes españa premio cervantes literatura"  loading="lazy">
             <p>Si bien esta máquina es eléctrica, toda una modernidad para la época en la cual la adquirió, nunca pudo
                 acostumbrarse a escribir en una computadora, la cual intentó usar cuando desde la editoria Seix Barral
                 le mandaron una, para que pueda terminas el libro "Antes del Fin", que terminó escribiendo finalmente
@@ -206,7 +206,7 @@
         </li>
         <li class="fotogaleria">
             <h2>Las biblioetecas de la Casona de Santos Lugares</h2>
-            <img src="img/clasicos literarios latinoamericanos.webp" alt="clasicos literarios latinoamericanos">
+            <img src="img/clasicos literarios latinoamericanos.webp" alt="clasicos literarios latinoamericanos"  loading="lazy">
             <p>Los miles de libros de las bibliotecas están en el mismo orden que Ernesto Sabato los dejó. Todos los
                 libros tienen la intervención de Ernesto y Matilde, que subrayaban y anotaban en sus lecturas. También
                 se pueden leer dedicatorias a los dueños de casa, de escritores que regalaban su último libro, y que hoy
@@ -214,21 +214,21 @@
         </li>g
         <li class="fotogaleria">
             <h2>Sabato y la pintura</h2>
-            <img src="img/pinturas expresionismo sartre.webp" alt="pinturas expresionismo sartre">
+            <img src="img/pinturas expresionismo sartre.webp" alt="pinturas expresionismo sartre"  loading="lazy">
             <p>Sus pinturas al oleo son oscuras como su obra literaria. Son alrededor de 70 obras que alguna vez expuso
                 en el Centre Pompideu en París. Se destaca su serie de retratos, y aquí vemos a Jean-Paul Sartre,
                 referente para Ernesto, en el compromiso de un escritor con la realidad política y social.</p>
         </li>
         <li class="fotogaleria">
             <h2>Sabato y sus horarios de campo</h2>
-            <img src="img/ernesto sabato penunmbra.webp" alt="ernesto sabato penunmbra">
+            <img src="img/ernesto sabato penunmbra.webp" alt="ernesto sabato penunmbra"  loading="lazy">
             <p>Dejar entrar la luz del sol que poco a poco va saliendo, al igual que dejar entrar la noche hasta quedar
                 en la penumbra. Ernesto se levantaba a las 4 30 de la mañana, se hacía un Te, y lo bebía con la estatua
                 de Ceres detrás de su ventana.</p>
         </li>
         <li class="fotogaleria">
             <h2>La casona y su arboleda</h2>
-            <img src="img/patio araucaria tango troilo decaro.webp" alt="patio araucaria tango troilo decaro">
+            <img src="img/patio araucaria tango troilo decaro.webp" alt="patio araucaria tango troilo decaro"  loading="lazy">
             <p>Santos Lugares era una zona de quintas antes de ir convirtiéndose en un pueblito de la Provincia de
                 Buenos Aires. La casa mantiene once de estos enormes árboles, que incluyen una magestuosa Araucaria. El
                 patio tiene farolitos y baldosas negras y blancas, dandole un espíritu Tanguero.</p>
@@ -236,14 +236,14 @@
 
         <li class="fotogaleria">
             <h2>Federico Valle y el Cine Argentino</h2>
-            <img src="img/maquina escribir sabato olivetti.webp" alt="maquina escribir sabato olivetti">
+            <img src="img/maquina escribir sabato olivetti.webp" alt="maquina escribir sabato olivetti"  loading="lazy">
             <p>Este estudio fue aluna vez un estudio de Cine, donde todas las paredes no eran sino de vidrio y hacían
                 de este lugar una especie de jardín de invierno cinematográfico, donde se filmaron algunas escenas de la
                 época de oro de nuestro cine.</p>
         </li>
         <li class="fotogaleria">
             <h2>El atelier</h2>
-            <img src="img/ATELIERCONTATA.webp" alt="pinturas Friedrich Nietzsche">
+            <img src="img/ATELIERCONTATA.webp" alt="pinturas Friedrich Nietzsche"  loading="lazy">
             <p>Fue su espacio de trabajo y refugio en el sus últimos años. Su primera pasión que inició en los jardines
                 de la Escuela Nacional de La plata, sería también la última</p>
         </li>
