--- a/eventos.html
+++ b/eventos.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="fonts.css">
     <meta name="description"
-        content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
+        content="eventos en la casa museo, noche de los museos, 24 de septiembre">
     <meta name="keywords"
         content="paseos, cultura, sobre heroes y tumbas, el tunel, abbadon el exterminador, escritor, existencialismo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
